# pico_multiwii

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
